Creating client outside the client thread.